--- a/arch/arm64/configs/oppo6771_defconfig
+++ b/arch/arm64/configs/oppo6771_defconfig
@@ -1,7 +1,8 @@
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
-CONFIG_LOCALVERSION="-M.A.P"
+CONFIG_LOCALVERSION="-N.E.O.L.I.T.-V1"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
+CONFIG_COMPAT_VDSO=y
 CONFIG_PINCTRL_MTK=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_UCLAMP_TASK=y
