gitignore: Update ignore list
Signed-off-by: Dark-Matter7232 <kerneldeveloper7232@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ kernel/configs/android-*.cfg
 # Object directory
 out/
 build-shit
+CosmicFresh-RMX1821/CosmicFresh-RMX1821-R*
+CosmicFresh-RMX1821/Image.gz-dtb
