--- a/arch/arm64/configs/RMX1821_defconfig
+++ b/arch/arm64/configs/RMX1821_defconfig
@@ -576,10 +576,9 @@ CONFIG_ARCH_HAS_PTE_SPECIAL=y
 # CONFIG_DISABLE_OOM_KILLER is not set
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
-CONFIG_PROCESS_RECLAIM=y
+# CONFIG_PROCESS_RECLAIM is not set
 # CONFIG_PERCPU_STATS is not set
 CONFIG_OPPO_MEM_MONITOR=y
-CONFIG_PROCESS_RECLAIM_ENHANCE=y
 # CONFIG_VIRTUAL_RESERVE_MEMORY is not set
 CONFIG_SECCOMP=y
 # CONFIG_PARAVIRT is not set
